samples/_failures_safe/1761322372_0db28d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_316a5ec8.c: In function ‘main’:
./samples/SAFE/__tmp_316a5ec8.c:148:19: error: missing terminating " character
  148 |         if (scanf("%d
      |                   ^~~
./samples/SAFE/__tmp_316a5ec8.c:148:9: error: expected expression at end of input
  148 |         if (scanf("%d
      |         ^~
./samples/SAFE/__tmp_316a5ec8.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_316a5ec8.c:148:9: error: expected declaration or statement at end of input
